[gd_scene load_steps=22 format=2]

[ext_resource path="res://resources/mainfont.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://app.gd" type="Script" id=2]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resizeMe.gd" type="Script" id=4]
[ext_resource path="res://resizeCanvas.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="DynamicFont" id=11]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.317647, 0.317647, 0.317647, 1 )

[sub_resource type="DynamicFont" id=16]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )

[sub_resource type="DynamicFont" id=10]
size = 45
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
script = ExtResource( 2 )

[node name="canvas" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_scale = 0.0
script = ExtResource( 5 )

[node name="homeScreen" type="Panel" parent="canvas" groups=["screen"]]
margin_right = 720.0
margin_bottom = 1280.0

[node name="version" type="Label" parent="canvas/homeScreen"]
margin_left = 7.0
margin_top = 72.0
margin_right = 189.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 14 )
text = "version"

[node name="header" type="Label" parent="canvas/homeScreen"]
margin_top = 68.0
margin_right = 714.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "papaHelper"
align = 1
valign = 1

[node name="paytodate" type="Panel" parent="canvas/homeScreen"]
visible = false
margin_left = 43.0
margin_top = 193.0
margin_right = 963.0
margin_bottom = 621.0
custom_styles/panel = SubResource( 1 )

[node name="header" type="Label" parent="canvas/homeScreen/paytodate"]
margin_right = 912.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 6 )
text = "Current paycheck hours:"
align = 1
valign = 1

[node name="week1header" type="Label" parent="canvas/homeScreen/paytodate"]
margin_left = 49.0
margin_top = 155.0
margin_right = 170.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 7 )
text = "Week 1: "

[node name="week2header" type="Label" parent="canvas/homeScreen/paytodate"]
margin_left = 47.0
margin_top = 317.0
margin_right = 176.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 8 )
text = "Week 2:"

[node name="recordHours" type="Button" parent="canvas/homeScreen" groups=["button"]]
margin_left = 33.0
margin_top = 570.0
margin_right = 697.0
margin_bottom = 690.0
custom_fonts/font = ExtResource( 3 )
text = "Record hours"
script = ExtResource( 4 )

[node name="recordTravel" type="Button" parent="canvas/homeScreen" groups=["button"]]
margin_left = 34.0
margin_top = 705.0
margin_right = 695.0
margin_bottom = 822.0
disabled = true
text = "Record paid travel"
script = ExtResource( 4 )

[node name="recordTipsInside" type="Button" parent="canvas/homeScreen" groups=["button"]]
margin_left = 32.0
margin_top = 837.0
margin_right = 695.0
margin_bottom = 954.0
disabled = true
text = "Record tips (inside)"
script = ExtResource( 4 )

[node name="recordTipsDriver" type="Button" parent="canvas/homeScreen" groups=["button"]]
margin_left = 32.0
margin_top = 967.0
margin_right = 691.0
margin_bottom = 1093.0
disabled = true
text = "Record tips (driver)"
script = ExtResource( 4 )

[node name="toolsScreen" type="Panel" parent="canvas" groups=["screen"]]
visible = false
margin_right = 720.0
margin_bottom = 1280.0

[node name="header" type="Label" parent="canvas/toolsScreen"]
margin_right = 720.0
margin_bottom = 110.0
text = "Tools "
align = 1
valign = 1

[node name="exportCSV" type="Button" parent="canvas/toolsScreen"]
margin_left = 86.0
margin_top = 105.0
margin_right = 311.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 223, 49 )
text = "export data CSV"

[node name="exportPDF" type="Button" parent="canvas/toolsScreen"]
margin_left = 377.0
margin_top = 106.0
margin_right = 602.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 223, 49 )
text = "export data PDF"

[node name="editRecords" type="Button" parent="canvas/toolsScreen"]
margin_left = 74.0
margin_top = 223.0
margin_right = 642.0
margin_bottom = 300.0
text = "Edit records"

[node name="settingsScreen" type="Panel" parent="canvas" groups=["screen"]]
visible = false
margin_right = 720.0
margin_bottom = 1280.0

[node name="header" type="Label" parent="canvas/settingsScreen"]
margin_left = 7.0
margin_top = 68.0
margin_right = 719.0
margin_bottom = 195.0
text = "Settings"
align = 1
valign = 1

[node name="loginstatus" type="Panel" parent="canvas/settingsScreen"]
visible = false
margin_left = 47.0
margin_top = 86.0
margin_right = 678.0
margin_bottom = 317.0
custom_styles/panel = SubResource( 2 )

[node name="status" type="Label" parent="canvas/settingsScreen/loginstatus"]
margin_right = 625.0
margin_bottom = 110.0
text = "Currenty logged into: Guest"
align = 1
valign = 1

[node name="login" type="Button" parent="canvas/settingsScreen/loginstatus"]
margin_left = 54.0
margin_top = 123.0
margin_right = 273.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 119, 44 )
text = "Login"

[node name="logout" type="Button" parent="canvas/settingsScreen/loginstatus"]
margin_left = 340.0
margin_top = 126.0
margin_right = 559.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 119, 44 )
text = "Logout"

[node name="debug" type="Button" parent="canvas/settingsScreen"]
margin_left = 51.0
margin_top = 419.0
margin_right = 659.0
margin_bottom = 495.0
disabled = true
text = "Debug Mode"

[node name="userInfo" type="Panel" parent="canvas/settingsScreen"]
visible = false
margin_left = 50.0
margin_top = 333.0
margin_right = 678.0
margin_bottom = 633.0
custom_styles/panel = SubResource( 3 )

[node name="curPay" type="Label" parent="canvas/settingsScreen/userInfo"]
margin_top = 10.0
margin_right = 328.0
margin_bottom = 50.0
text = "Current Pay:"

[node name="manualWithholdings" type="Label" parent="canvas/settingsScreen/userInfo"]
margin_left = 2.0
margin_top = 40.0
margin_right = 140.0
margin_bottom = 54.0
text = "Manual Withholdings:"

[node name="taxRate" type="Label" parent="canvas/settingsScreen/userInfo"]
margin_left = 3.0
margin_top = 77.0
margin_right = 73.0
margin_bottom = 91.0
text = "Tax rate %:"

[node name="clearData" type="Button" parent="canvas/settingsScreen"]
margin_left = 50.0
margin_top = 303.0
margin_right = 658.0
margin_bottom = 383.0
disabled = true
text = "CLEAR ALL DATA - irreversible"

[node name="reviewData" type="Panel" parent="canvas" groups=["screen"]]
margin_right = 720.0
margin_bottom = 1280.0

[node name="header" type="Label" parent="canvas/reviewData"]
margin_left = 19.0
margin_top = 73.0
margin_right = 697.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 11 )
text = "Recorded shifts"
align = 1
valign = 1

[node name="list" type="ItemList" parent="canvas/reviewData"]
margin_left = 15.0
margin_top = 269.0
margin_right = 700.0
margin_bottom = 1005.0
custom_fonts/font = SubResource( 13 )
auto_height = true

[node name="totalbg" type="Panel" parent="canvas/reviewData"]
margin_left = 14.0
margin_top = 1022.0
margin_right = 701.0
margin_bottom = 1123.0
custom_styles/panel = SubResource( 15 )

[node name="total" type="Label" parent="canvas/reviewData/totalbg"]
margin_top = 3.0
margin_right = 684.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 16 )
text = "Total hours: "
align = 1
valign = 1

[node name="controlbg" type="Panel" parent="canvas/reviewData"]
margin_left = 15.0
margin_top = 167.0
margin_right = 696.0
margin_bottom = 256.0
custom_styles/panel = SubResource( 17 )

[node name="edit" type="Button" parent="canvas/reviewData/controlbg"]
margin_left = 396.0
margin_top = 8.0
margin_right = 675.0
margin_bottom = 83.0
disabled = true
text = "Edit"

[node name="delete" type="Button" parent="canvas/reviewData/controlbg"]
margin_left = 250.0
margin_top = 8.0
margin_right = 388.0
margin_bottom = 82.0
disabled = true
text = "Delete"

[node name="Button" type="Button" parent="canvas/reviewData/controlbg"]
margin_left = 5.0
margin_top = 6.0
margin_right = 239.0
margin_bottom = 82.0
disabled = true
text = "View a different week"

[node name="toolbar" type="Panel" parent="canvas"]
margin_left = -3.0
margin_top = 1138.0
margin_right = 720.0
margin_bottom = 1273.0

[node name="home" type="Button" parent="canvas/toolbar" groups=["button"]]
margin_left = 6.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 3 )
text = "Home"
script = ExtResource( 4 )

[node name="review" type="Button" parent="canvas/toolbar" groups=["button"]]
margin_left = 169.0
margin_top = 4.0
margin_right = 330.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 3 )
text = "View"
script = ExtResource( 4 )

[node name="tools" type="Button" parent="canvas/toolbar"]
margin_left = 344.0
margin_top = 1.0
margin_right = 525.0
margin_bottom = 132.0
disabled = true
text = "tools"
script = ExtResource( 4 )

[node name="settings" type="Button" parent="canvas/toolbar" groups=["button"]]
margin_left = 538.0
margin_top = 5.0
margin_right = 717.0
margin_bottom = 133.0
disabled = true
text = "settings"
script = ExtResource( 4 )

[node name="NOTIBAR" type="Panel" parent="canvas"]
margin_right = 718.0
margin_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 5 )

[node name="popup" type="WindowDialog" parent="canvas"]
margin_left = 24.0
margin_top = 136.0
margin_right = 691.0
margin_bottom = 1099.0

[node name="bg" type="Panel" parent="canvas/popup"]
margin_left = -3.0
margin_top = -2.0
margin_right = 665.0
margin_bottom = 962.0
custom_styles/panel = SubResource( 9 )

[node name="header" type="Label" parent="canvas/popup" groups=["popup"]]
margin_left = 12.0
margin_top = 13.0
margin_right = 652.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 10 )
text = "you shouldnt see this..."
align = 1
valign = 1

[node name="recordHours" type="Control" parent="canvas/popup"]
margin_left = -15.0
margin_top = -22.0
margin_right = 25.0
margin_bottom = 18.0

[node name="select" type="SpinBox" parent="canvas/popup/recordHours"]
margin_left = 57.0
margin_top = 384.0
margin_right = 255.0
margin_bottom = 449.0
rect_scale = Vector2( 3, 3 )
step = 0.1
allow_greater = true

[node name="confirm" type="Button" parent="canvas/popup/recordHours"]
margin_left = 359.0
margin_top = 828.0
margin_right = 671.0
margin_bottom = 977.0
text = "confirm"

[node name="cancel" type="Button" parent="canvas/popup/recordHours"]
margin_left = 20.0
margin_top = 829.0
margin_right = 346.0
margin_bottom = 975.0
text = "quit"

[connection signal="pressed" from="canvas/homeScreen/recordHours" to="." method="_on_recordHours_pressed"]
[connection signal="item_selected" from="canvas/reviewData/list" to="." method="_on_list_item_selected"]
[connection signal="nothing_selected" from="canvas/reviewData/list" to="." method="_on_list_nothing_selected"]
[connection signal="pressed" from="canvas/reviewData/controlbg/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="canvas/reviewData/controlbg/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="canvas/toolbar/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="canvas/toolbar/review" to="." method="_on_review_pressed"]
[connection signal="pressed" from="canvas/toolbar/tools" to="." method="_on_tools_pressed"]
[connection signal="pressed" from="canvas/toolbar/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="canvas/popup/recordHours/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="canvas/popup/recordHours/cancel" to="." method="_on_cancel_pressed"]
